random number example

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+.background{
+  background-color: gray;
+}
+
+  </style>
 </head>
-<body>
+<body id="main">
+  <h1>Javascript-01</h1>
+
+
+
+
+
+
+  
   <script src="js/javascript.js"></script>
 </body>
 </html>
